Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/diamond/neg/Neg23.out
Neg23.java:10:39: compiler.err.not.def.public.cant.access: pkg.Neg23_02, pkg
1 error
